# CodeTest1

./: CMakeLists.txt  NR-110554-TC-4A-Coding Test.doc  Notes.txt  ReadMe.txt
Headers/: Display.h  constants.h
Source/: Display.cpp  main.cpp
headers/: Display.h  RGB565.h  constants.h  functions.h
src/: Display.cpp  RGB565.cpp  functions.cpp  main.cpp
test/basic_tests/: CMakeLists.txt  RGB565_tests.cpp  function_tests.cpp
test/libs/googletest/: .gitignore
test/libs/googletest/codegear/: gtest_link.cc
test/libs/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc
test/libs/googletest/test/: gtest-death-test_ex_test.cc  gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-linked_ptr_test.cc  gtest-listener_test.cc  gtest-message_test.cc  gtest-options_test.cc  gtest-param-test_test.cc  gtest-port_test.cc  gtest-printers_test.cc  gtest-test-part_test.cc  gtest-tuple_test.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_break_on_failure_unittest_.cc  gtest_catch_exceptions_test_.cc  gtest_color_test_.cc  gtest_env_var_test_.cc  gtest_environment_test.cc  gtest_filter_unittest_.cc  gtest_list_tests_unittest_.cc  gtest_main_unittest.cc  gtest_output_test_.cc  gtest_pred_impl_unittest.cc  gtest_premature_exit_test.cc  gtest_repeat_test.cc  gtest_shuffle_test_.cc  gtest_sole_header_test.cc  gtest_stress_test.cc  gtest_throw_on_failure_ex_test.cc  (+7 more)
tests/: RGB565_tests.cpp  RGB565_tests.h  functions_tests.cpp  functions_tests.h  tests.cpp
(+19 files in other folders)
